# advcpp

./: .gitignore  01_basic_read.cpp  02_batch_read.cpp  03_file_copy.cpp  05_pipeline_copy.cpp  07_echo_common.hpp  07_echo_server.cpp  07_echo_server_epoll.cpp  07_echo_server_uring_naive.cpp  09_echo_sqpoll.cpp  11_multishot.cpp  13_file_server.cpp  15_graceful_shutdown.cpp  16_asio_echo.cpp  17_splice_echo.cpp  CMakeLists.txt  Makefile  b.txt  compile_commands.json  io_uring_utils.hpp  sample.txt
io_uring/: 02_batch_read.cpp  04_linked_copy.cpp  05_pipeline_copy.cpp  06_fixed_buffers.cpp  07_echo_common.hpp  07_echo_server_uring_naive.cpp  08_echo_bench.cpp  10_provided_buffers.cpp  11_multishot.cpp  12_coroutine_echo.cpp  14_timeout.cpp  18_registered_fds.cpp  19_multithread_echo.cpp  Makefile  README.md  a.txt  b.txt  c.txt  echo_common.hpp  io_uring_utils.hpp  test_echo.py
userspace_drivers/: 01_pci_enum.cpp  CMakeLists.txt
